@@ -165,6 +165,7 @@ enum guCommandIds {
     //
     ID_LYRICS_UPDATE_LYRICINFO,
     ID_LYRICS_COPY,
+    ID_LYRICS_PASTE,
     ID_LYRICS_PRINT,
     //
     ID_MULTIMEDIAKEYS_DBUS,
